--- a/UI/Searching.UI.WinPhoneClient/Resources/AppResources.resx
+++ b/UI/Searching.UI.WinPhoneClient/Resources/AppResources.resx
@@ -131,4 +131,10 @@
   <data name="SampleProperty" xml:space="preserve">
     <value>Sample Runtime Property Value</value>
   </data>
+  <data name="AppBarButtonText" xml:space="preserve">
+    <value>add</value>
+  </data>
+  <data name="AppBarMenuItemText" xml:space="preserve">
+    <value>Menu Item</value>
+  </data>
 </root>
